--- a/src/config/defaultConfig.json
+++ b/src/config/defaultConfig.json
@@ -1,9 +1,9 @@
 {
     "ipFiltering": {
       "enabled": true,
-      "allowedIps": ["192.168.1.1", "10.0.0.2"],
-      "blockedIps": ["203.0.113.0", "198.51.100.1"],
-      "maxRequestsPerMinute": 100,
+      "allowedIps": ["192.168.1.1/24", "10.0.0.2/8"],
+      "blockedIps": ["203.0.113.0/24", "198.51.100.1/24","0.0.0.0/8","172.0.0.1/8","::1/24","192.168.1.105/24"],
+      "maxRequestsPerMinute": 80,
       "banDuration": 3600
     },
     "rateLimiting": {
