updated package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netweb",
+  "name": "reqweb",
   "version": "1.0.0",
   "description": "A powerful Web Application Firewall (WAF) for Node.js.",
   "main": "src/index.js",
